05 Nov 2012 IBM 3791 support - Max H. Parke <ikj1234i@yahoo.com> by Fish
04 Oct 2012 Change PSW command display to use SYSBLK archmode if loadstate
            indicator is on - Kevin Leonard
30 Sep 2012 Fix ipl.c "ipl failed" messages to give each a separate
            message ID (HHC00810E for IPL device not found, HHC00828E for
            IPL device I/O error, HHC00839E for invalid IPL PSW); to display
            SYSBLK architecture mode in messages HHC00828E and HHC00839E; to
            delete message HHC00829I - Kevin Leonard
10 Sep 2012 CMPSC_2012: CMPSC-Enhancement Facility zero padding support - Fish
15 Aug 2012 Change DASD utilities defaults to make wait PSW in IPL1 record
            EC-mode and disabled for machine checks, add -b and -m switches
            to dasdinit and dasdload to obtain old behavior - Kevin Leonard
15 Aug 2012 Prevent command reject response to no-op during Read IPL to disk
            - Kevin Leonard, Mark L. Gaubatz
18 Jul 2012 Report IO/s on panel displays when operating in device server mode
            (no configured CPUs).
18 Jul 2012 Support CCW command 0x01, write no carriage return in con1052c.c,
            but only when generated for no message prefixing.  -- jph
20 Jun 2012 Update configure to recognize GCC versions; use -march=native when
            supported by GCC; correct debug option generation.
            - Mark L. Gaubatz
19 Jun 2012 Fix dasd PSF PRSD suborder 03 bug (florian.bilek@gmail.com by Fish)
17 Jun 2012 Improved TOD clock resolution; eliminated floating-point clock
            conversions under Windows; document interval timer conversion
            factors; corrected various clock stores - Mark L. Gaubatz
23 May 2012 Fix INTLOCK bug in PTF and STSI instructions causing deadlock
            during SYNCHRONIZE_CPUS leading to eventual Machine Check
            identified by Neale Ferguson [neale@sinenomine.net] -- Fish
16 May 2012 Do initial CPU reset when MAINSIZE is changed - Kevin Leonard